READY FOR MOBILE USING HTML and CSS

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -68,7 +68,7 @@
 // Banner
 #front {
     .shop_now {
-        background-image: url('/Icons/Icons/Categories/2.png');
+        background-image: url('./Icons/Icons/Categories/2.png');
         background-repeat: no-repeat;
         // width: 100%;
         background-size: 100%;
